Thu Sep 26 20:22:53 UTC 2013  Steve Huston  <shuston@riverace.com>

        * ace/ACE.cpp (recvv_n_i): Resolve 64-bit compile warning on Windows.

Sun Sep 22 21:14:38 UTC 2013  Abdul Sowayan  <sowayan@gmail.com>

        * include/makeinclude/platform_macosx_mavericks.GNU:
          Adding support for OSX 10.9 Mavericks

Sun Sep 22 21:07:34 UTC 2013  Abdul Sowayan  <sowayan@gmail.com>

        * ace/config-macosx-mavericks.h:

          Adding support for OSX 10.9 Mavericks

Sat Sep 21 14:12:18 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_23_Test.cpp:
          Extended test case

Sat Sep 21 14:05:54 UTC 2013  johnny  <johnny@remedy.nl>

        * bin/ACE+TAO+CIAO+DAnCE.json:
          Ignore all throw

Tue Sep 17 13:10:05 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_27_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          Added C++11 test which tests operator <<= together with
          std::move

Tue Sep 17 12:12:16 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_24_Test.cpp:
          Corrected friend

        * tests/OS_Test.cpp:
          Zapped empty lines

Mon Sep 16 14:34:32 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_24_Test.cpp:
          Removed g++ specific code, that is really a GCC bug, see
          http://gcc.gnu.org/bugzilla/show_bug.cgi?id=50370

Mon Sep 16 10:48:29 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_24_Test.cpp:
          Using a default on the redeclaration only works with G++

Mon Sep 16 09:56:17 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_24_Test.cpp:
          Further extend this unit test with more code

Mon Sep 16 09:37:33 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Extended Embarcadero C++ Builder instructions
